# julesh-optics

./: README.md  julesh-optics.cabal  stack.yaml
src/Optics/Encoding/: Class.hs  CoendLens.hs  ConcreteLens.hs  IOLens.hs  LinearLens.hs  ProfunctorLens.hs
