name:                julesh-optics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/julesh-optics#readme
license:             BSD3
license-file:        LICENSE
author:              Jules Hedges
maintainer:          jules.hedges@strath.ac.uk
copyright:           2020 Jules Hedges
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Optics.Encoding.Class, Optics.Encoding.ConcreteLens, Optics.Encoding.LinearLens,
                       Optics.Encoding.CoendLens, Optics.Encoding.ProfunctorLens,
                       Optics.Encoding.IOLens
  build-depends:       base >= 4.7 && < 5, profunctors
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/julesh-optics
